@@ -1,7 +1,7 @@
 1..980
 # Running under perl version 5.008007 for linux
-# Current time local: Mon Mar 17 08:50:53 2008
-# Current time GMT:   Sun Mar 16 23:50:53 2008
+# Current time local: Thu Mar 20 08:41:37 2008
+# Current time GMT:   Wed Mar 19 23:41:37 2008
 # Using Test.pm version 1.25
 # t/tokenizer-test-2.dat
 ok 1
