@@ -1,3 +1,8 @@
+2008-03-20  Wakaba  <wakaba@suika.fam.cx>
+
+	* HTML.pm.src (_get_next_token): Remove |first_start_tag|
+	flag, which is no longer used.
+
 2008-03-17  Wakaba  <wakaba@suika.fam.cx>
 
 	* HTML.pm.src: Set line/column information to element nodes.
